# meeting-recorder-v2

./: .commit-msg.tmp  .gitignore  HANDOFF.md  README.md  build-bundle.ps1  make_shortcut.py  next.config.ts  package-lock.json  package.json  release-notes-v2.0.14.md  release-notes-v2.0.15.md  release-notes-v2.0.16.md  release-notes-v2.0.17.md  release-notes-v2.0.18.md  release-notes-v2.0.19.md  setup.py  tsconfig.json  zip-bundle.py
backend/: requirements-cpu.txt  requirements.txt  server.py
backend/config/: settings.py
backend/core/: audio_capture.py  diarization.py  summarizer.py  transcription.py
backend/models/: segment.py  session.py  speaker.py
backend/services/: calendar_monitor.py  calendar_service.py  client_config_service.py  export_service.py  follow_up_email.py  recording_service.py  recovery_service.py  retention_service.py  session_service.py  template_service.py
backend/utils/: audio_utils.py  logger.py  startup_shortcut.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: calendar-monitor.tsx  clients-view.tsx  decisions-view.tsx  follow-ups-view.tsx  gpu-acceleration-card.tsx  prep-brief-view.tsx  record-view.tsx  search-view.tsx  session-detail-dialog.tsx  sessions-view.tsx  settings-view.tsx  usage-guide-view.tsx
src/lib/: api.ts  useUnprocessedSessions.ts
