[package]
name = "meeting-recorder"
version = "2.0.12"
description = "AI-powered meeting recorder, transcription, and summarizer"
authors = ["Joshua Rodriguez"]
license = "MIT"
repository = "https://github.com/joshuarodriguez82/meeting-recorder-v2"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
